[package]
name = "habitator"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.68"
clap = { version = "4.1.0", features = ["derive", "color", "suggestions"] }
dirs = "4.0.0"
itertools = "0.10.5"
ron = "0.8.0"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
toml = "0.5.10"

[dev-dependencies]
predicates = "2.1.5"
assert_cmd = "2.0.8"
temp-env = "0.3.1"
